// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoKeywordSet works 1`] = `
Object {
  "actionables": Array [
    "TODO",
  ],
  "done": Array [
    "DONE",
  ],
  "keywords": Array [
    "TODO",
    "DONE",
  ],
}
`;

exports[`TodoKeywordSet works 2`] = `
Object {
  "actionables": Array [
    "TODO",
  ],
  "done": Array [
    "DONE",
  ],
  "keywords": Array [
    "TODO",
    "DONE",
  ],
}
`;

exports[`TodoKeywordSet works 3`] = `
Object {
  "actionables": Array [
    "TODO",
    "NEXT",
  ],
  "done": Array [
    "DONE",
  ],
  "keywords": Array [
    "TODO",
    "NEXT",
    "DONE",
  ],
}
`;

exports[`TodoKeywordSet works 4`] = `
Object {
  "actionables": Array [
    "TODO",
    "NEXT",
  ],
  "done": Array [
    "DONE",
  ],
  "keywords": Array [
    "TODO",
    "NEXT",
    "DONE",
  ],
}
`;

exports[`TodoKeywordSet works 5`] = `
Object {
  "actionables": Array [
    "TODO",
  ],
  "done": Array [
    "DONE",
    "CANCELLED",
  ],
  "keywords": Array [
    "TODO",
    "DONE",
    "CANCELLED",
  ],
}
`;
